examples/test/testpolicy13675.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13675
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key9: value30
      key35: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value26
          key4: value2
      podSelector:
        matchLabels:
          key35: value3
